--- a/apps/web/src/layouts/SiteLayout.astro
+++ b/apps/web/src/layouts/SiteLayout.astro
@@ -16,7 +16,7 @@ interface Props {
 const { title, description, blank, className } = Astro.props
 ---
 
-<html lang="en" class="m-0 p-0">
+<html lang="en" class="m-0 p-0 scroll-smooth">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
