--- a/apps/web/src/pages/blog/[slug].astro
+++ b/apps/web/src/pages/blog/[slug].astro
@@ -1,5 +1,6 @@
 ---
 import { getCollection, render } from 'astro:content'
+import { TableOfContents } from '@/components/ui/TableOfContents'
 import SingleLayout from '@/layouts/SingleLayout.astro'
 
 export async function getStaticPaths() {
@@ -12,9 +13,10 @@ export async function getStaticPaths() {
 }
 
 const { entry } = Astro.props
-const { Content } = await render(entry)
+const { Content, headings } = await render(entry)
 ---
 
 <SingleLayout {...entry.data}>
   <Content />
+  <TableOfContents headings={headings} client:load slot="toc" />
 </SingleLayout>
