--- a/apps/web/src/pages/snippets/index.astro
+++ b/apps/web/src/pages/snippets/index.astro
@@ -1,13 +1,12 @@
 ---
+import { MobileSnippetButtonToggle } from '@/components/ui/SnippetButtonToggle'
 import SnippetLayout from '@/layouts/SnippetLayout.astro'
 ---
 
 <SnippetLayout>
   <div class="prose prose-stone max-w-none">
     <h1 class="text-4xl font-heading tracking-wider text-stone-700">NOTHING TO SEE HERE</h1>
-    <p>Use the snippet list on the left to explore the content.</p>
-  </div>
-  <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-    <slot />
+    <p class="hidden md:block">Use the snippet list on the left to explore the content.</p>
+    <div class="block md:hidden"><MobileSnippetButtonToggle client:load /> or clik the button at the bottom to explore the snippets content.</div>
   </div>
 </SnippetLayout>
