--- a/apps/web/src/components/base/Head.astro
+++ b/apps/web/src/components/base/Head.astro
@@ -102,5 +102,5 @@ const slug = Astro.url.pathname.replace(/\/$/, '').split('/').pop()
     requestAnimationFrame(raf);
   </script>
 
-  <script type="text/partytown" defer src="https://analytics.alfanjauhari.com/script.js" data-website-id="616726df-fa46-46b9-bc91-84d78de258c0" data-domains="alfanjauhari.com"></script>
+  <script type="text/partytown" defer src="https://analytics.alfanjauhari.com/script.js" data-website-id="616726df-fa46-46b9-bc91-84d78de258c0" data-domains="www.alfanjauhari.com"></script>
 </head>
