feat: add more functionality and some enhancements

--- a/apps/web/src/content/updates/_components/web-development-with-progressive-enhancement/FormSandpack.astro
+++ b/apps/web/src/content/updates/_components/web-development-with-progressive-enhancement/FormSandpack.astro
@@ -8,7 +8,7 @@ const files = ['/sandpack-files/App.tsx', '/sandpack-files/App.module.css'].map(
       process.cwd(),
       'src',
       'content',
-      'blog',
+      'updates',
       '_components',
       'web-development-with-progressive-enhancement',
       path,
