--- a/apps/web/src/components/base/Head.astro
+++ b/apps/web/src/components/base/Head.astro
@@ -11,7 +11,7 @@ interface Props {
 const { title, description } = Astro.props
 
 const type = (() => {
-  if (Astro.url.pathname.startsWith('/blog')) return 'blog'
+  if (Astro.url.pathname.startsWith('/updates')) return 'updates'
   if (Astro.url.pathname.startsWith('/snippets')) return 'snippets'
   return 'page'
 })()
