--- a/apps/web/src/components/ui/RestrictedUpdates.astro
+++ b/apps/web/src/components/ui/RestrictedUpdates.astro
@@ -1,15 +1,15 @@
 ---
 import { getCollection } from 'astro:content'
-import ArticleCard from '@/components/ui/ArticleCard.astro'
+import UpdateCard from '@/components/ui/UpdateCard.astro'
 
-const restrictedArticles = await getCollection('restricted').then((posts) =>
+const restrictedUpdates = await getCollection('restricted').then((posts) =>
   posts.sort((a, b) => b.data.updatedAt.getTime() - a.data.updatedAt.getTime()),
 )
 ---
 
 {
-  restrictedArticles.map((post) => (
-    <ArticleCard
+  restrictedUpdates.map((post) => (
+    <UpdateCard
       title={post.data.title}
       description={post.data.description}
       tag={post.data.tag}
