--- a/apps/web/src/layouts/SingleLayout.astro
+++ b/apps/web/src/layouts/SingleLayout.astro
@@ -15,13 +15,13 @@ const { title, description, date, tag } = Astro.props
 <SiteLayout title={title} description={description}>
   <style set:html={getSandpackCssText()} id="sandpack"></style>
   <div
-    class="py-20 flex flex-col items-center max-w-(--breakpoint-lg) mx-auto has-[.toc]:max-w-(--breakpoint-xl)"
+    class="py-20 flex flex-col items-center max-w-(--breakpoint-lg) mx-auto has-[#toc]:max-w-(--breakpoint-xl)"
   >
     {
       (tag || date) && (
         <div class="flex items-center gap-2">
           <a
-            href={`/blog/tag/${tag}`}
+            href={`/updates/tag/${tag}`}
             class="bg-stone-700 text-white font-semibold p-2 w-fit text-sm"
           >
             {tag}
@@ -45,11 +45,11 @@ const { title, description, date, tag } = Astro.props
     </div>
 
     <div
-      class="has-[.toc]:grid has-[.toc]:grid-cols-[3fr_1fr] has-[.toc]:gap-6 mt-12 group/single-layout"
+      class="has-[#toc]:grid has-[#toc]:grid-cols-[3fr_1fr] has-[#toc]:gap-6 mt-12 group/single-layout"
     >
       <article
-        id="article-content"
-        class="mx-auto w-full max-w-(--breakpoint-lg) prose prose-stone prose-pre:[tab-size:2] prose-a:decoration-dotted"
+        id="single-content"
+        class="mx-auto w-full max-w-(--breakpoint-lg) prose prose-stone prose-pre:[tab-size:2] prose-a:decoration-dotted prose-headings:scroll-mt-8"
       >
         <slot />
       </article>
