--- a/apps/web/src/pages/updates/index.astro
+++ b/apps/web/src/pages/updates/index.astro
@@ -1,29 +1,29 @@
 ---
 import { getCollection } from 'astro:content'
-import ArticleCard from '@/components/ui/ArticleCard.astro'
-import RestrictedArticles from '@/components/ui/RestrictedArticles.astro'
+import RestrictedUpdates from '@/components/ui/RestrictedUpdates.astro'
 import { RevealHeading } from '@/components/ui/RevealHeading'
+import UpdateCard from '@/components/ui/UpdateCard.astro'
 import SiteLayout from '@/layouts/SiteLayout.astro'
 
-const posts = await getCollection('blog').then((posts) =>
+const posts = await getCollection('updates').then((posts) =>
   posts.sort((a, b) => b.data.date.getTime() - a.data.date.getTime()),
 )
 ---
 
 <SiteLayout
-  title="Blog"
-  description="Latest articles, thought and random stuffs mixed in one place"
+  title="Updates"
+  description="Latest updates, thoughts and random stuffs mixed in one place"
 >
   <div class="flex flex-col gap-12 py-20">
     <RevealHeading
       client:visible
       className="text-6xl lg:text-10xl text-stone-700"
-      >Latest Articles</RevealHeading
+      >Latest Updates</RevealHeading
     >
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-2">
       {
         posts.map((post) => (
-          <ArticleCard
+          <UpdateCard
             title={post.data.title}
             description={post.data.description}
             tag={post.data.tag}
@@ -32,7 +32,7 @@ const posts = await getCollection('blog').then((posts) =>
           />
         ))
       }
-      <RestrictedArticles server:defer />
+      <RestrictedUpdates server:defer />
     </div>
   </div>
 </SiteLayout>
