--- a/apps/web/src/components/ui/UpdateCard.astro
+++ b/apps/web/src/components/ui/UpdateCard.astro
@@ -5,7 +5,7 @@ interface Props {
   slug: string
   tag: string
   title: string
-  date: Date
+  date: Date | string
   description: string
   type?: 'updates' | 'restricted'
 }
@@ -26,7 +26,7 @@ const { type = 'updates', ...post } = Astro.props
         {
           Intl.DateTimeFormat("en-ID", {
             dateStyle: "medium",
-          }).format(post.date)
+          }).format(new Date(post.date))
         }
       </p>
       {
