feat: add homepage

--- a/src/styles.css
+++ b/src/styles.css
@@ -223,6 +223,8 @@
   --shadow-lg: var(--shadow-lg);
   --shadow-xl: var(--shadow-xl);
   --shadow-2xl: var(--shadow-2xl);
+
+  --text-xxs: 0.625rem;
 }
 
 body {
