--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,8 @@
 @import "@fontsource-variable/playfair-display/wght-italic.css";
 @import "@fontsource-variable/playfair-display";
 
+@plugin "@tailwindcss/typography";
+
 @custom-variant dark (&:is(.dark *));
 
 :root {
