feat(dashboard): add user dashboard

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -54,7 +54,7 @@
   --font-serif:
     "Playfair Display Variable", Georgia, Cambria, "Times New Roman", Times,
     serif;
-  --radius: 0.625rem;
+  --radius: 0;
   --shadow-x: 0;
   --shadow-y: 1px;
   --shadow-blur: 3px;
