--- a/src/assets/fonts.css
+++ b/src/assets/fonts.css
@@ -16,6 +16,16 @@
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
+
+@font-face {
+    font-family: 'Adjusted Arial Fallback';
+    src: local(Arial);
+    size-adjust: 99%;
+    ascent-override: 91%;
+    descent-override: normal;
+    line-gap-override: normal;
+}
+
 @font-face {
   font-family: 'Playfair Display Variable';
   font-style: normal;
@@ -34,6 +44,16 @@
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
+
+@font-face {
+    font-family: 'Adjusted Georgia Fallback';
+    src: local(Georgia);
+    size-adjust: 100%;
+    ascent-override: 113%;
+    descent-override: normal;
+    line-gap-override: normal;
+}
+
 @font-face {
   font-family: 'JetBrains Mono Variable';
   font-style: normal;
@@ -50,4 +70,14 @@
   font-weight: 100 900;
   src: url(/fonts/JetBrains-Mono-Italic.woff2) format('woff2-variations');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+}
+
+
+@font-face {
+    font-family: 'Adjusted Courier New Fallback';
+    src: local(Courier New);
+    size-adjust: 96%;
+    ascent-override: 91%;
+    descent-override: normal;
+    line-gap-override: 5%;
 }
